--- a/urbanthreads/accounts/templates/accounts/profile.html
+++ b/urbanthreads/accounts/templates/accounts/profile.html
@@ -29,7 +29,8 @@
                                 {% else %}
                                 <p>Guest *Please Log in to checkout</p>
                                 {% endif %}
-                                <p>Pakistan</p><a class="btn btn-primary btn-lg d-block w-100" role="button" href="#" style="box-shadow: none;">VIEW ADDRESSES</a>
+                                <p>Pakistan</p>
+                                <a class="btn btn-primary btn-lg d-block w-100" role="button" href="{% url 'accounts:view_addresses' %}" style="box-shadow: none;">VIEW ADDRESSES</a>
                             </div>
                         </div>
                     </div>
