--- a/urbanthreads/cart/templates/cart/cart.html
+++ b/urbanthreads/cart/templates/cart/cart.html
@@ -23,18 +23,20 @@
                                             <div class="col-md-4">
                                                 
                                                 <div class="row">
-                                                    <div class="col-md-6 d-flex justify-content-center"><img class="w-auto" src="{{ item.product.product_images.first.image.url}}" style="height: 198.4px;"></div>
-                                                        <div class="col-md-6 py-4">
-                                                        <a href="{% url 'store:product_detail' item.product.uid %}">
-                                                        <h6 class="fw-bold m-0">{{ item.product.product_name }}</h6>
-                                                        </a>
-                                                        <span><br>
-                                                        PKR {{ item.product.product_price }}<br>
-                                                        Color: {{ item.color }}<br>
-                                                        Size: {{ item.size }}<br>
-                                                        Gender: {{ item.product.product_category }}<br>
-                                                        </span>
-                                                        </div>
+                                                    <div class="col-md-6 d-flex justify-content-center">
+                                                        <img class="w-auto" src="{{ item.product.product_images.first.image.url}}" style="height: 198.4px;">
+                                                    </div>
+                                                    <div class="col-md-6 py-4">
+                                                    <a href="{% url 'store:product_detail' item.product.uid %}">
+                                                    <h6 class="fw-bold m-0">{{ item.product.product_name }}</h6>
+                                                    </a>
+                                                    <span><br>
+                                                    PKR {{ item.product.product_price }}<br>
+                                                    Color: <label class="color-p-circle"style="background-color:{{ item.color }};"></label><br>
+                                                    Size: {{ item.size }}<br>
+                                                    Gender: {{ item.product.product_category }}<br>
+                                                    </span>
+                                                    </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 d-flex">
@@ -46,7 +48,7 @@
                                                     <a class="mx-5" href="{% url 'cart:delete_from_cart' item.key %}"><i class="far fa-trash-alt fs-3"></i></a>
                                                 </div>
                                             <div class="col-md-4">
-                                                <h6 class="text-end fw-bold mt-3">PKR {{total_price}}</h6>
+                                                <h6 class="text-end fw-bold mt-3">PKR {{item.product.product_price}}*{{ item.quantity }}</h6>
                                             </div>
                                         </div>
                                     </td>
